# newton-principia.gaia

./: pyproject.toml
.gaia/: ir.json  ir_hash
newton_principia/: __init__.py
